--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <!--Uses Permissions-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".ParseTestApplication"
@@ -30,7 +32,7 @@
             android:noHistory="true"></activity>
         <activity
             android:name=".Restaurant.RestaurantActivity"
-            android:noHistory="true"></activity>
+            ></activity>
 
 
     </application>
