--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+repositories {
+}
+
 android {
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
@@ -22,7 +25,8 @@ android {
 dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'commons-io:commons-io:+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: 'Parse-*.jar', dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile project(':library')
 }
